--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SearchImage</string>
+
+    <string name="logger">[ARE]</string>
+
+    <string name="screen_search">Search</string>
+    <string name="screen_detail">Detail</string>
+    <string name="screen_bookmark">Bookmark</string>
+
+
+
 </resources>
