--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="screen_detail">Detail</string>
     <string name="screen_bookmark">Bookmark</string>
 
+    <string name="photo_detail_id">ID</string>
+    <string name="photo_detail_author">Author</string>
+    <string name="photo_detail_size">Size</string>
+    <string name="photo_detail_created_at">Created At</string>
 
 
 </resources>
